# AIhydro-data

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  LICENSE  PAPER.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
aihydro_data/: __init__.py  _pipeline.py  _version.py  cli.py  contracts.py  exceptions.py
aihydro_data/cache/: __init__.py  manifest.py
aihydro_data/flood/: __init__.py  gfm.py  gfm_stac.py
aihydro_data/geometry/: __init__.py  batch.py  measures.py
aihydro_data/help_topics/: __init__.py  auth.md  batch.md  caching.md  deprecations.md  errors.md  fallback.md  first_fetch.md  products.md
aihydro_data/mcp/: __init__.py
aihydro_data/products/: __init__.py  dem.py  et.py  flood.py  geology.py  impervious.py  landcover.py  optical.py  precipitation.py  soil.py  soil_moisture.py  streamflow.py  temperature.py  vegetation.py
aihydro_data/routing/: __init__.py  detect.py  policy.py  regions.py
aihydro_data/sampling/: __init__.py  catchment.py  chunked.py
aihydro_data/skills/: __init__.py
aihydro_data/sources/: __init__.py  _common.py  _retry.py  base.py  cds_glofas.py  direct_api.py  gee.py  geoglows_retro.py  hyriver.py  openmeteo_flood.py  pygeoglim.py  stac.py
aihydro_data/sources/_gee_vendored/: __init__.py  contracts.py  presets.py  timeseries.py
aihydro_data/sources/gee/: __init__.py  _composite.py  _download.py
aihydro_data/transforms/: __init__.py  cloud_mask.py  indices.py
aihydro_data/viz/: __init__.py  _common.py  _compare.py  auto.py  hydrology.py  spatial.py
scripts/: gen_product_tables.py
tests/: conftest.py  test_auto_batch.py  test_cache_and_batch.py  test_doc_consistency.py  test_geology_product.py  test_gfm_fetch.py  test_gfm_stac.py  test_indices.py  test_layering.py  test_live_backends.py  test_live_sweep.py  test_mcp_tools.py  test_open_meteo.py  test_optical_products.py  test_phase1_fixes.py  test_phase2_integrity.py  test_phase3_products.py  test_phase3_routing_cache.py  test_phase4_products.py  test_phase_d_robustness.py  test_routing.py  test_sampling.py  test_scaffold.py  test_stac.py  test_viz.py
tests/benchmarks/: _gen_basins.py  _report.py  _sweep.py  sweep_results.json
